Avoid double scroll bars by hiding overflow on shell related pages

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -1135,6 +1135,10 @@ $primary-dark: darken( map-get($md-primary, 500), 8% );
     overflow-y: auto;
   }
 
+  .rightside-content-hold.shell {
+    overflow-y: hidden !important;
+  }
+
   app-networksummary .mat-list .mat-subheader {
     @include variable(color, --fg2, $fg2);
   }
